--- a/DaRoça/Página inicial/Pagina_de_carregamento.html
+++ b/DaRoça/Página inicial/Pagina_de_carregamento.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DáRoça</title>
-     <link rel="stylesheet" href="pagina_carr.css">
-     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="pagina_carr.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap" rel="stylesheet">
 
@@ -24,6 +24,12 @@
     </header>
 
     <div class="corpo">
+
+        <div class="next">
+            <h1>Conheça mais sobre o nosso catálogo</h1>
+            <p>Nós oferecemos uma vasta variedade de produtos naturais, indo desde frutas a verduras das mais frescas</p>
+            <button>Conhecer</button>
+        </div>
 
         <h1 class="lily-script-one-regular" id="cor">Um pouco sobre nós</h1>
         
