--- a/DaRoça/Página inicial/index.html
+++ b/DaRoça/Página inicial/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="PT-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lily+Script+One&display=swap" rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
 </head>
 <body>
@@ -15,8 +16,8 @@
         <div class="menu">
                 <a href="#"><img src="daRoca.png" alt="" id="logo"></a>
             <nav>
-                <a href="#">Cadastro</a>
-                <a href="" id="cad">Entrar</a>
+                <a href="#" class="">Cadastro</a>
+                <a href="" id="cad" class="">Entrar</a>
             </nav>
         </div>
 
@@ -28,7 +29,7 @@
         <div class="next">
             <h1>Conheça mais sobre o nosso catálogo</h1>
             <p>Nós oferecemos uma vasta variedade de produtos naturais, indo desde frutas a verduras das mais frescas</p>
-            <button>Conhecer</button>
+            <a href="">Conhecer</a>
         </div>
 
         <h1 class="lily-script-one-regular" id="cor">Um pouco sobre nós</h1>
@@ -44,20 +45,14 @@
             <img src="pote2.webp" alt="">
         </div>
         
-        <div class="alinhar">
-            <div class="texto"> 
-                <h2>O que é a DaRoça?</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
-                    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, 
-                    sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
-            <img src="pote2.webp" alt="">
-        </div>
     </div>
 
-    <footer>
-        @2025 DaRoça
+       <footer class="rodape">
+        <div class="container">
+            <p>© 2025 DaRoça. Todos os direitos reservados.</p>
+            <a href="#"class="social-icons"><i class='bx bxl-instagram'></i></a>
+            <a href="#"class="social-icons"><i class='bx bxl-facebook-square'></i></a>
+        </div>
     </footer>
 </body>
 </html>
