--- a/Site/cadastro.html
+++ b/Site/cadastro.html
@@ -12,7 +12,7 @@
 <body>
 
     <div id="logo-voltar">
-        <a href=".\Pagina_de_carregamento"><img src="daRoca.png" alt="" id="logo"></a>
+        <a href="#"><img src="daRoca.png" alt="" id="logo"></a>
     </div>
     
     <div class="form-container">
